# oil-inspection-app

./: README.md  app.py  main.py  pyproject.toml  text.txt
static/: style.css
templates/: form.html  report.html
