[project]
name = "interior-designer-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.2.0",
    "flask>=3.1.2",
    "google-genai>=1.32.0",
    "google-generativeai>=0.8.5",
    "markdown>=3.8.2",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]
